k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend
  namespace: athlefi-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: krakend
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
        - name: krakend
          image: krakend:2.10.2
          args: ["run", "-d", "-c", "/etc/krakend/krakend.json"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: krakend-config
              mountPath: /etc/krakend
      volumes:
        - name: krakend-config
          configMap:
            name: krakend-config
