k3s/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: athlefi-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend
  namespace: athlefi-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: krakend
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
        - name: krakend
          image: devopsfaith/krakend:2.5
          args: ["run", "-d", "-c", "/etc/krakend/krakend.json"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: krakend-config-volume
              mountPath: /etc/krakend/krakend.json
              subPath: krakend.json
      volumes:
        - name: krakend-config-volume
          configMap:
            name: krakend-config
---
apiVersion: v1
kind: Service
metadata:
  name: krakend
  namespace: athlefi-dev
spec:
  selector:
    app: krakend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-ingress
  namespace: athlefi-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: gateway.athlefi.internal.mx-central-1.sparkfly.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krakend
                port:
                  number: 80
  tls:
    - hosts:
        - gateway.athlefi.internal.mx-central-1.sparkfly.cloud
